# DoorOpening

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  DoorOpeningConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/DoorAngleDetector/: CMakeLists.txt  DoorAngleDetector.cpp  DoorAngleDetector.hpp
src/Components/KeyholeDetector/: CMakeLists.txt  KeyholeDetector.cpp  KeyholeDetector.hpp
src/Components/MatTransform/: CMakeLists.txt  MatTransform.cpp  MatTransform.hpp
src/Components/ModelReader/: CMakeLists.txt  ModelReader.cpp  ModelReader.hpp
src/Components/POI/: CMakeLists.txt  POI.cpp  POI.hpp
src/Components/PlaneGenerator/: CMakeLists.txt  PlaneGenerator.cpp  PlaneGenerator.hpp
src/Components/ROSProxy/: CMakeLists.txt  ROSProxy.cpp  ROSProxy.hpp
src/Components/Stitcher/: CMakeLists.txt  Stitcher.cpp  Stitcher.hpp
src/Components/TransformGenerator/: CMakeLists.txt  TransformGenerator.cpp  TransformGenerator.hpp
src/Components/VanishingPointsEstimator/: CMakeLists.txt  VanishingPointsEstimator.cpp  VanishingPointsEstimator.hpp
src/Components/Warper/: CMakeLists.txt  Warper.cpp  Warper.hpp
src/Types/: CMakeLists.txt
tasks/: AdaptiveThreshold.xml  DoorAngle.xml  Matcher.xml  MatcherUnified.xml  POI.xml  ROSProxy.xml
